docs(home): make fix min-width to 100% (parent size on safari)
This is a known issue for Safari browser https://stackoverflow.com/questions/6695676/100-width-css-issue-only-on-mobile-safari

--- a/projects/ngrx.io/src/styles/_ngrx.scss
+++ b/projects/ngrx.io/src/styles/_ngrx.scss
@@ -69,7 +69,7 @@ aio-shell.page-home {
     max-width: 100%;
   }
   pre.prettyprint {
-    width: auto;
+    min-width: 100%;
     border: none;
     padding: 1rem 2rem;
     margin: 0;
